# Book-summarizer

./: .gitignore  CHUNK_FILES_GUIDE.md  CLAUDE.md  GETTING_STARTED.md  RAW_vs_ANALYSIS_CHUNKS.md  README.md  REALTIME_CHUNKS_GUIDE.md  SAVE_CHUNKS_QUICKREF.md  UV_QUICKSTART.md  VSCODE_SETUP.md  book_summarizer.py  notebooklm_integration.py  ollama_summarizer.py  pyproject.toml
ollama_dev/: 01_read_book.py  02_preprocessing_dictionary.py  03_split_into_chunks.py  04_summarize_chunks.py  05_validate_summaries.py  06_synthesize_final_summary.py  IMPROVEMENT_ACTION_PLAN.md
