[project]
name = "book-summarizer"
version = "0.1.0"
description = "Token-efficient book summarization using Claude, Ollama, and NotebookLM"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Roberto Riquelme", email = "your-email@example.com" }
]
keywords = ["books", "summarization", "claude", "ai", "nlm", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
]

dependencies = [
    # Core dependencies for book_summarizer.py
    "anthropic>=0.25.0",
    "pypdf>=4.0.0",
    "ebooklib>=0.18.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",

    # Optional: Ollama support (for ollama_summarizer.py)
    "ollama>=0.1.0",

    # Optional: NotebookLM integration (for notebooklm_integration.py)
    "notebooklm-py[browser]>=0.1.0;python_version>='3.10'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# UV-specific configurations (optional, but good for teams)
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
